# ferrix

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  lint.yml
benches/: add_benchmark.rs  div_benchmark.rs  dot_benchmark.rs  mul_benchmark.rs  sub_benchmark.rs
example/: README.md  donut.rs
examples/: donut.rs
src/: lib.rs  matrix.rs  matrix_t_view.rs  matrix_t_view_mut.rs  matrix_transpose_view.rs  matrix_transpose_view_mut.rs  matrix_view.rs  matrix_view_mut.rs  row_vector.rs  row_vector_view.rs  row_vector_view_mut.rs  traits.rs  vector.rs  vector_transpose_view.rs  vector_transpose_view_mut.rs  vector_view.rs  vector_view_mut.rs
src/ops/: add.rs  add_assign.rs  div.rs  div_assign.rs  dot.rs  macros.rs  matmul.rs  mod.rs  mul.rs  mul_assign.rs  sub.rs  sub_assign.rs
src/vector/: mod.rs  traits.rs  vector_impl.rs  vector_view.rs  vector_view_mut.rs
src/vector/ops/: add.rs  add_assign.rs  div.rs  div_assign.rs  dot.rs  mod.rs  mul.rs  mul_assign.rs  sub.rs  sub_assign.rs
tests/: test_add.rs  test_add_assign.rs  test_div.rs  test_div_assign.rs  test_dot.rs  test_matmul.rs  test_matrix.rs  test_matrix_transpose_view.rs  test_matrix_transpose_view_mut.rs  test_matrix_view.rs  test_matrix_view_mut.rs  test_mul.rs  test_mul_assign.rs  test_row_vector.rs  test_row_vector_view.rs  test_row_vector_view_mut.rs  test_sub.rs  test_sub_assign.rs  test_vector.rs  test_vector_transpose_view.rs  test_vector_transpose_view_mut.rs  test_vector_view.rs  test_vector_view_mut.rs
