[package]
name = "ferrix"
version = "0.1.0"
authors = ["Angus Stewart <siliconlad@protonmail.com>"]
edition = "2021"
description = "A simple typed matrix library for Rust"
license = "MIT"
homepage = "https://github.com/siliconlad/ferrix"
repository = "https://github.com/siliconlad/ferrix"
readme = "README.md"
categories = ["mathematics"]
keywords = ["vector", "matrix", "linear-algebra", "math"]

[[example]]
name = "donut"
path = "example/donut.rs"

[[bench]]
name = "add_benchmark"
harness = false

[[bench]]
name = "sub_benchmark"
harness = false

[[bench]]
name = "mul_benchmark"
harness = false

[[bench]]
name = "div_benchmark"
harness = false

[[bench]]
name = "dot_benchmark"
harness = false

[dependencies]
num-traits = "0.2.19"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"
